--- a/home.css
+++ b/home.css
@@ -1,20 +1,44 @@
-@import url(http://fonts.googleapis.com/css?family=Ubuntu:700);
 @import url(http://fonts.googleapis.com/css?family=Muli);
 
 div.profile-bg {
     position: relative;
     margin-bottom: 25px;
+    text-align: center;
 }
-
+.icons {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 35%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+.icon {
+    width: 30px;
+    height: 30px;
+    margin-left: 5px;
+    margin-right: 5px;
+    opacity: 0.6;
+}
+.icon:hover{
+    opacity: 1;
+}
+.nav-btn {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;   
+}
 img#skyline {
     display: block;
     width: 100%;
+    height: 100%;
 }
-
 h1 {
     display: block;
-    position: absolute;   
-    top: 10%;
+    position: absolute;
+    top: 23%;
     left: 0;
     right: 0;
     margin-left: auto;
@@ -23,6 +47,17 @@ h1 {
     font-family: 'Muli', sans-serif;
     font-weight: 700;
     font-size: 350%;
+    z-index: 10;
+}
+p.about-info {
+    font-weight: 200;
+    font-size: 20px;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+.aboutme {
+    text-align: center;
+    margin: 10%;
 }
 
 img#mypic {
@@ -31,26 +66,44 @@ img#mypic {
     height: 150px;
     border-radius: 50%;
     position: absolute;
-    top: 60%;
+    top: 55%;
     left: 0;
     right: 0;
     margin-left: auto;
     margin-right: auto;
 }
-
 div.resume-block {
     position: relative;
 }
-
-button.download {
+a.download {
     position: absolute;
     top: 5%;
-    right: 10%;
+    right: 13%;
 }
-
-#resume {
+img#resume {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    border-style: ridge;
+    border-radius: 1%;
+    border: 8px solid #333;
 }
+footer {
+    padding-top: 5%;
+    padding-bottom: 5%;
+    background-color: #333;
+    text-align: center;
+    font-size: 20px;
+    color: #FFF;
+    margin-top: 10px;
+}
+
+
+
+
+
+
+
+
+
 
