--- a/home.css
+++ b/home.css
@@ -49,17 +49,30 @@ h1 {
     font-size: 350%;
     z-index: 10;
 }
-p.about-info {
+p.info {
     font-weight: 200;
-    font-size: 20px;
+    font-size: 17px;
     margin-left: 10%;
     margin-right: 10%;
 }
 .aboutme {
     text-align: center;
-    margin: 10%;
+    float: left;
+    width: 33%;
+    margin-bottom: 25px;
 }
-
+.classes {
+    text-align: center;
+    width: 33%;
+    display: inline-block;
+    margin-bottom: 25px;
+}
+.work {
+    text-align: center;
+    width: 33%;
+    float: right;   
+    margin-bottom: 25px;
+}
 img#mypic {
     display: block;
     width: 150px;
@@ -89,8 +102,8 @@ img#resume {
     border: 8px solid #333;
 }
 footer {
-    padding-top: 5%;
-    padding-bottom: 5%;
+    padding-top: 3%;
+    padding-bottom: 3%;
     background-color: #333;
     text-align: center;
     font-size: 20px;
