--- a/index.css
+++ b/index.css
@@ -101,13 +101,16 @@ img#mypic {
     left: 50%;
     transform: translate(-50%, -50%);
 }
+img.section-img {
+    opacity: 0.7;
+}
 div.resume-block {
     position: relative;
 }
-a.download {
+div#download-button{
     position: absolute;
-    top: 5%;
-    right: 13%;
+    top: 10%;
+    right: 15%;
 }
 img#resume {
     display: block;
@@ -126,6 +129,7 @@ footer {
     color: #FFF;
     margin-top: 10px;
 }
+
 /*.nav-btn {
     width: 100px;
     height: 100px;
