--- a/index.css
+++ b/index.css
@@ -56,6 +56,12 @@ p.info {
     margin-left: 10%;
     margin-right: 10%;
 }
+img#android-img {
+    width: 25px;
+    height: 25px;
+    margin-left: 5px;
+    margin-bottom: -7px;
+}
 .aboutme {
     text-align: center;
     float: left;
