--- a/index.css
+++ b/index.css
@@ -66,7 +66,7 @@ img#android-img {
     width: 33%;
     margin-bottom: 25px;
 }
-.classes {
+.learning {
     text-align: center;
     width: 33%;
     display: inline-block;
