--- a/index.css
+++ b/index.css
@@ -66,9 +66,14 @@ img.icon {
     margin-left: 7px;
     margin-right: 7px;
     opacity: 0.8;
+    transition: transform 200ms ease-out;
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
 }
 img.icon:hover{
-    -webkit-transform: scale(1.3);
+    transition: transform 200ms ease-out;
+    -webkit-transform: scale(1.3); 
     -ms-transform: scale(1.3);
     transform: scale(1.3);
     opacity: 1;
