--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ a, a:hover {
 }
 a.up-button {
     float: right;
-    margin: 20px;
+    margin-right: 20px;
      transition: transform 200ms ease-out;
     -webkit-transform:rotate(0deg);
     -o-transform:rotate(0deg);
@@ -195,7 +195,10 @@ img#mypic {
 img.section-img {
     opacity: 0.7;
 }
-
+.section-header {
+/*    display: inline-block;*/
+    
+}
 /* SECTION HEADER */
 .left-divider {
     display: inline-block;
@@ -283,7 +286,68 @@ img#android-project {
     left: 50%;
     transform: translate(-50%, 0);
 }
-
+.app-card {
+    font-size: 24px;
+    font-weight: 200;
+    width: 250px;
+    height: 280px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 30px;
+    -webkit-box-shadow: 2px 2px 2px 1px #BDBDBD;
+    -moz-box-shadow: 2px 2px 2px 2px #BDBDBD;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: transform 200ms ease-in;
+    -webkit-transform: scale(1.0); 
+    -ms-transform: scale(1.0);
+    transform: scale(1.0);
+}
+.app-card.android {
+    background: url(images/icons/android_watermark.png); 
+}
+.app-card.apple {
+    background: url(images/icons/apple_watermark.png) no-repeat;
+    background-position: center;
+}
+.project-section {
+    display: flex;
+    flex-wrap: wrap;
+}
+a.app_redirect_button {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100px;
+    text-decoration: none;
+    color: whitesmoke;
+    font-size: 18px;
+    border-radius: 5px;
+    padding: 5px;
+}
+a.app_redirect_button.android {
+    border: 2px solid #689F38;
+    background-color: #8BC34A;
+    box-shadow: 0px 4px 0px 0px #689F38;
+}
+a.app_redirect_button.android:active {
+    background-color: #689F38;
+    transform: translate(0px, 5px);
+    -webkit-transform: translate(0px, 5px);
+    box-shadow: 0px 1px 0px 0px;
+}
+a.app_redirect_button.apple {
+    border: 2px solid #424242;
+    background-color: #757575;
+    box-shadow: 0px 4px 0px 0px #424242;
+}
+a.app_redirect_button.apple:active {
+    background-color: #424242;
+    transform: translate(0px, 5px);
+    -webkit-transform: translate(0px, 5px);
+    box-shadow: 0px 1px 0px 0px;
+}
 /* FOOOTER */
 footer {
     padding-top: 3%;
