--- a/index.css
+++ b/index.css
@@ -20,29 +20,39 @@ a.up-button:hover {
 }
 div.header {
     position: relative;
-    margin-bottom: 25px;
     text-align: center;
     margin-bottom: 50px;
 }
 div#navbar {
-    width: 400px;
-    height: 60px;
-    border-radius: 10px;
-    background: #FFFFFF;
+    width: 100%;
+    height: 50px;
+    background: #000;
     opacity: 0.5;
     position: absolute;
-    left: 20px;
-    top: 20px;
-/*    transform: translate(-50%, 0);*/
+}
+div#navbar ul {
+    margin-top: 5px;
+}
+div#navbar ul.group li:not(#magic-line) {
+    padding: 20px;
+    display: inline;
 }
 #navbar a {
-    display: inline-block;
-    margin: 10px;
+/*    display: inline-block;*/
+    margin: 20px;
     margin-top: 12px;
     font-size: 25px;
-    color: #000;
-    font-weight:600;
+    color: #fff;
+    font-weight: 400;
 }
+#magic-line { 
+    position: absolute; 
+    left: 0; 
+    width: 100px; 
+    height: 2px; 
+    background: #fff; 
+}
+
 div#my-name {
     position: absolute;
     display: block;
