--- a/index.css
+++ b/index.css
@@ -1,5 +1,10 @@
 @import url(http://fonts.googleapis.com/css?family=Muli);
 
+body, html, main {
+    height: 100%;
+    background-color: #EEEEEE;
+    color: #424242;
+}
 a, a:hover, a:focus, a:active {
     text-decoration: none;
     color: #000;
@@ -18,14 +23,6 @@ img#up-btn-img {
     width: 100px;
     height: 100px;
 }
-/*
-a.up-button:hover {
-    transition: transform 200ms ease-out;
-    -webkit-transform:rotate(180deg);
-    -o-transform:rotate(180deg);
-    -ms-transform:rotate(180deg);
-}
-*/
 div.header {
     position: relative;
     text-align: center;
@@ -83,7 +80,8 @@ div#my-name {
     margin-left: auto;
     margin-right: auto;
 }
-div#my-name h1 {
+/*div#my-name */
+h1 {
     text-align: center;
     color: #fff;
     font-family: 'Muli', sans-serif;
@@ -152,7 +150,6 @@ img#skyline {
     display: block;
     width: 100%;
     height: 350px;
-/*    opacity: 0.7;*/
     z-index: 0;
 }
 p.info {
@@ -207,19 +204,19 @@ div#profile-style {
     margin-left: auto;
     margin-right: auto;
 }
-div#white-circle {
+.profile-border-circle {
     position: absolute;
     display: block;
     width: 160px;
     height: 160px;
     border-radius: 50%;
-    background-color: #FFFFFF;
+    background-color: #EEEEEE;
 }
 img#mypic {
     position: absolute;
     display: block;
-    width: 150px;
-    height: 150px;
+    width: 145px;
+    height: 145px;
     border-radius: 50%;
     top: 50%;
     left: 50%;
@@ -291,7 +288,6 @@ img#resume {
     border-radius: 1%;
     border: 8px solid #333;
 }
-
 div#temp-android {
     width: 300px;
     height: 300px;
@@ -438,6 +434,44 @@ a.app_redirect_button.django:active {
     transform: translate3d(0px, 0px, 0px);
 }
 
+.parallax-fixed-bg {
+    height: 175px;
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: repeat;
+    background-position: center center;
+    margin-bottom: 15px;
+    margin-right: 15px;
+}
+.parallax-fixed-bg h1 {
+    color: white;    
+    text-align: center;
+    vertical-align: middle;
+    line-height: 175px;
+}
+.parallax-fixed-bg.fixed-bg-1 {
+    background-image: url("images/new-york-city-grayscale.jpg");
+}
+.parallax-fixed-bg.fixed-bg-2 {
+    background-image: url("images/brooklyn-bridge-at-night.jpg");
+    filter: sepia(0.65);
+    -webkit-filter: sepia(0.65);
+    -moz-filter: sepia(0.65);
+    -o-filter: sepia(0.65);
+    -ms-filter: sepia(0.65);
+}
+.parallax-fixed-bg.fixed-bg-3 {
+    background-image: url("images/new-york-city-night.jpg");
+    filter: sepia(0.65);
+    -webkit-filter: sepia(0.65);
+    -moz-filter: sepia(0.65);
+    -o-filter: sepia(0.65);
+    -ms-filter: sepia(0.65);
+}
+parallax-scrolling-bg {
+    min-height: 100%;
+}
+
 /*
 .fadeIn{
 	animation-name: fadeIn;
@@ -485,6 +519,7 @@ a.app_redirect_button.django:active {
 
 /* FOOOTER */
 footer {
+    
     padding-top: 3%;
     padding-bottom: 3%;
     background-color: #333;
