--- a/index.css
+++ b/index.css
@@ -98,24 +98,36 @@ div#icons {
     bottom: 8px;
     margin-bottom: 10px;
 }
-img.icon {
+.icon {
     display: inline-block;
     width: 50px;
     height: 50px;
     margin-left: 7px;
     margin-right: 7px;
     opacity: 0.8;
+    border-radius: 5px;
+    -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84,      0.44, 1);
+    transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+/*
     transition: transform 200ms ease-in;
     -webkit-transform: scale(1);
     -ms-transform: scale(1);
     transform: scale(1);
+*/
 }
-img.icon:hover{
-    transition: transform 200ms ease-out;
-    -webkit-transform: scale(1.3); 
-    -ms-transform: scale(1.3);
-    transform: scale(1.3);
-    opacity: 1;
+.icon:after {
+    content: "";
+    border-radius: 5px;
+    opacity: 0;
+    -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1)
+}
+.icon:hover {
+  -webkit-transform: scale(1.25, 1.25);
+  transform: scale(1.25, 1.25)
+}
+.icon:hover:after {
+    opacity: 1
 }
 img.icon.facebook {
     margin-right: 20px;
@@ -127,6 +139,7 @@ img.icon.bitbucket {
     margin-left: 115px;
 }
 img.icon.github {
+    background-color: black;
     margin-left: 20px;
 }
 @media (max-width: 530px) {
