--- a/index.css
+++ b/index.css
@@ -228,6 +228,9 @@ img#mypic {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    box-shadow: 3px 5px 10px 1px #424242;
+    -webkit-box-shadow: 3px 5px 10px 1px #424242;
+    -moz-box-shadow: 3px 5px 10px 1px #424242;
 }
 #contact-me {
     position: absolute;
@@ -240,9 +243,12 @@ img#mypic {
     transform: translate(-50%, -50%);
     background: #000;
     opacity: 0;
-    background-image: url("images/icons/ic_mail_outline_white_36px.svg");
-    background-repeat: no-repeat;
-    background-size: contain;
+}
+#contact-me > img {
+    height: 100%;
+    display: inline-block;
+    margin: auto;
+    vertical-align: middle;
 }
 .clear-out {
     animation: scaleClear 0.6s ease-in;
@@ -254,6 +260,76 @@ img#mypic {
 
 	visibility: visible !important;	
     opacity: 0.6;
+}
+#modal {
+    position: fixed;
+    text-align: center;
+    border-radius: 4px;
+    z-index: 1000;
+    width: 300px;
+    height: auto;
+    left: 50%;
+    transform: translate(-50%, 0);
+    background: #FFF;
+    padding: 10px;
+}
+.modal-view {
+    top: -600px;    
+    visibility: hidden;
+    
+    -moz-transition: all 600ms ease;
+    -webkit-transition: all 600ms ease;
+    -o-transition: all 600ms ease;
+    transition: all 600ms ease;
+    
+    -moz-transform: translate3d(0px, -600px, 0px);
+    -webkit-transform: translate3d(0px, -600px, 0px);
+    -o-transform: translate(0px, -600px);
+    -ms-transform: translate(0px, -600px);
+    transform: translate3d(0px, -600px, 0px);    
+} 
+.modal-in-view {
+    top: 20%;
+    visibility: visible !important;
+    
+    -moz-transition: all 600ms ease;
+    -webkit-transition: all 600ms ease;
+    -o-transition: all 600ms ease;
+    transition: all 600ms ease;
+    
+    -moz-transform: translate3d(0px, 20%, 0px);
+    -webkit-transform: translate3d(0px, 20%, 0px);
+    -o-transform: translate(0px, 20%);
+    -ms-transform: translate(0px, 20%);
+    transform: translate3d(0px, 20%, 0px);
+}
+#modal form {
+    text-align: center;
+    display: block;
+    width: 100%;
+    margin: auto;
+}
+#modal form * {
+    margin-top: 5px;
+    margin-bottom: 5px;
+    width: 100%;
+    border: solid 2px #BDBDBD;
+    border-radius: 4px;
+    overflow: auto;
+    outline: none;
+    resize: none;
+}
+#modal-send-btn {
+    font-size: 18px;
+    color: #E1F5FE;
+    background-color: #00B0FF;
+    border: solid 2px #00B0FF !important;
+}
+#close-modal {
+    display: block;
+    color: #FCE4EC;
+    background-color: #EC407A;
+    border: 0 !important;
 }
 @keyframes scaleBlack {
 	0% {
@@ -352,6 +428,7 @@ img#resume {
     border-style: ridge;
     border-radius: 1%;
     border: 8px solid #333;
+    box-shadow: 3px 5px 10px 1px #424242;
 }
 div#temp-android {
     width: 300px;
@@ -392,7 +469,7 @@ img#android-project {
     margin-bottom: 30px;
     -webkit-box-shadow: 2px 2px 2px 1px #BDBDBD;
     -moz-box-shadow: 2px 2px 2px 2px #BDBDBD;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    box-shadow: 0px 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     transition: transform 200ms ease-in;
     -webkit-transform: scale(1.0); 
     -ms-transform: scale(1.0);
@@ -489,7 +566,6 @@ a.app_redirect_button.django:active {
     -moz-backface-visibility: hidden;
     backface-visibility: hidden;
 }
-
 .scroll-view-animate-elem.in-view {
     opacity: 1;
     -moz-transform: translate3d(0px, 0px, 0px);
@@ -498,7 +574,6 @@ a.app_redirect_button.django:active {
     -ms-transform: translate(0px, 0px);
     transform: translate3d(0px, 0px, 0px);
 }
-
 .parallax-fixed-bg {
     height: 175px;
     background-size: cover;
@@ -536,52 +611,6 @@ a.app_redirect_button.django:active {
 parallax-scrolling-bg {
     min-height: 100%;
 }
-
-/*
-.fadeIn{
-	animation-name: fadeIn;
-	-webkit-animation-name: fadeIn;	
-
-	animation-duration: 0.8s;	
-	-webkit-animation-duration: 0.8s;
-
-	animation-timing-function: ease-in-out;	
-	-webkit-animation-timing-function: ease-in-out;		
-
-	visibility: visible !important;	
-}
-
-@keyframes fadeIn {
-	0% {
-		transform: scale(0);
-		opacity: 0.0;		
-	}
-    80% {
-        transform: scale(1.1);
-        opacity: 1;	
-    }
-	100% {
-		transform: scale(1);
-		opacity: 1;	
-	}		
-}
-
-@-webkit-keyframes fadeIn {
-	0% {
-		-webkit-transform: scale(0);
-		opacity: 0.0;		
-	}
-    80% {
-        -webkit-transform: scale(1.1);
-        opacity: 1;	
-    }
-	100% {
-		-webkit-transform: scale(1);
-		opacity: 1;	
-	}		
-}
-*/
-
 /* FOOOTER */
 footer {
     
