--- a/index.css
+++ b/index.css
@@ -474,13 +474,17 @@ img#android-project {
     text-align: center;
     margin-top: 20px;
     margin-bottom: 30px;
-    -webkit-box-shadow: 2px 2px 2px 1px #BDBDBD;
+    -webkit-box-shadow: 2px 2px 2px 2px #BDBDBD;
     -moz-box-shadow: 2px 2px 2px 2px #BDBDBD;
-    box-shadow: 0px 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    transition: transform 200ms ease-in;
-    -webkit-transform: scale(1.0); 
-    -ms-transform: scale(1.0);
-    transform: scale(1.0);
+    box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.12), 
+                0px 1px 3px 0px rgba(0,0,0,0.24);
+}
+.app-card:hover {
+    -webkit-box-shadow: 2px 2px 2px 2px #BDBDBD;
+    -moz-box-shadow: 2px 2px 2px 2px #BDBDBD;
+    box-shadow: 1px 4px 5px 0px rgba(0,0,0,0.12), 
+                1px 4px 5px 0px rgba(0,0,0,0.24);   
+    transition: box-shadow 0.2s;
 }
 .app-card.android {
     background: url(images/icons/android_watermark.png); 
