--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Muli);
 
 body, html, main {
+    position: relative;
     height: 100%;
     background-color: #EEEEEE;
     color: #424242;
@@ -29,47 +30,42 @@ div.header {
     margin-bottom: 50px;
 }
 div#navbar {
-    height: 100%;
-    width: 18%;
-    margin-right: 10px;
-/*    float: left;*/
+    z-index: 999;
+    background-color: #424242;
+    text-align: center;
+    top: 0;
+    width: 100%;    
+    vertical-align: middle;
     position: fixed;
-/*    flex-grow: 1;*/
 }
 div#navbar ul {
-    top: 50%;
-    transform: translateY(-50%);
+    margin: 10px auto;
     list-style: none;
     padding: 0;
-    margin: 0 auto auto 0;
+    width: 400px;
+    display: flex;
 }
-div#navbar ul.group li:not(#magic-line) {
-    padding: 0 5px 5px 0;
-    margin: 0 10px 10px 0;
+div#navbar ul li {
+    color: #ffffff;
+    display: inline-block;
+    padding-bottom: 5px;
+    flex: 1;
+    border-bottom: 3px solid #29B6F6;
+    margin: auto 5px;
 }
 #navbar a {
-    margin: 20px;
-    margin-top: 12px;
     font-size: 24px;
-    color: #424242;
-    font-weight: 600;
+    color: #fffff2;
+    font-weight: 300;
 }
 div.page-body {
-    width: 84%;
-/*    flex-grow: 5;*/
     float: right;
+    margin: auto 20px;
 }
 div.main-body {
 /*    display: flex;*/
     display: inline-block;
     position: relative;
-}
-#magic-line { 
-    position: absolute; 
-    left: 0; 
-    width: 100px; 
-    height: 2px; 
-    background: #fff; 
 }
 div#my-name {
     position: absolute;
@@ -189,7 +185,7 @@ img#android-img {
 /*    float: left;   */
     margin-bottom: 25px;
 }
-.info-section {
+.info-section, .project-section {
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
@@ -198,7 +194,7 @@ img#android-img {
     margin-left: 10px;
     margin-bottom: 20px;
 }
-.info-section .col {
+.col {
     flex: 1;
     min-width: 300px;
 }
@@ -635,7 +631,6 @@ parallax-scrolling-bg {
 }
 /* FOOOTER */
 footer {
-    
     padding-top: 3%;
     padding-bottom: 3%;
     background-color: #333;
